Fixed header z-index.

--- a/docs/assets/css/app.css
+++ b/docs/assets/css/app.css
@@ -1208,7 +1208,7 @@ a {
 
 .header-main {
   position: relative;
-  z-index: 10; }
+  z-index: 100; }
   .header-main .wrapper {
     display: flex;
     flex-direction: column;
@@ -1306,7 +1306,8 @@ a {
     flex-direction: column;
     opacity: 0;
     visibility: hidden;
-    transition: opacity .2s ease, visibility .2s ease; }
+    transition: opacity .2s ease, visibility .2s ease;
+    z-index: 100; }
     .nav-main a {
       padding: 20px;
       transform: translateX(-30px);
