--- a/src/assets/scss/components/_components.header.scss
+++ b/src/assets/scss/components/_components.header.scss
@@ -1,6 +1,6 @@
 .header-main {
   position: relative;
-  z-index: 10;
+  z-index: 100;
   .wrapper {
     display: flex;
     flex-direction: column;
