--- a/src/assets/scss/components/_components.navigation.scss
+++ b/src/assets/scss/components/_components.navigation.scss
@@ -56,6 +56,7 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity .2s ease, visibility .2s ease;
+    z-index: 100;
     
     a {
       padding: 20px;
